--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         }
         .items-grid {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             grid-gap: 20px;
-            justify-items: center;
-            align-items: center;
+        }
+        .two_col {
+            grid-column: span 2;
         }
         .card {
             background-color: #2c2f3d;
@@ -43,7 +44,6 @@
             justify-content: space-between;
             align-items: center;
             height: 380px;
-            width: 250px;
             color: white;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
             position: relative;
@@ -80,11 +80,17 @@
             .items-grid {
                 grid-template-columns: repeat(2, 1fr);
             }
+            .two_col {
+                grid-column: span 2;
+            }
         }
         /* Очень маленькие экраны */
         @media screen and (max-width: 480px) {
             .items-grid {
                 grid-template-columns: 1fr;
+            }
+            .two_col {
+                grid-column: span 1;
             }
         }
     </style>
